--- a/ZorinBlue-Light/gtk-3.0/gtk.css
+++ b/ZorinBlue-Light/gtk-3.0/gtk.css
@@ -1903,6 +1903,10 @@ toolbutton > button.image-button.text-button.flat button:active, toolbutton > bu
 window.background:not(.solid-csd) > notebook:not(.frame) tab { margin-bottom: 4px; }
 
 /************ Nautilus * */
+/*.nautilus-window  {background-color: solid rgba(255, 255, 255, 0.96);}*/
+
+.nautilus-window { background-image: url("/home/ivando/Pictures/Wallpapers/nautilus-window-background.jpg"); }
+
 .nautilus-window .floating-bar { min-height: 32px; padding: 0; border-radius: 10px 10px 0 0; background-color: white; background-clip: padding-box; }
 
 .nautilus-window .floating-bar.bottom.left { margin-right: 7px; border-top-left-radius: 0; border-bottom-left-radius: 10px; }
@@ -1911,7 +1915,8 @@ window.background:not(.solid-csd) > notebook:not(.frame) tab { margin-bottom: 4p
 
 .nautilus-window .floating-bar button { padding: 0; }
 
-.nautilus-window .nautilus-list-view { background-color: white; border-radius: 0 0 10px 10px; }
+/*.nautilus-window .nautilus-list-view { background-color: white; border-radius: 0 0 10px 10px; }*/
+.nautilus-window .nautilus-list-view { background-image:url("/home/ivando/Pictures/Wallpapers/nautilus-window-background.jpg"); border-radius: 0 0 10px 10px; }
 
 .nautilus-window .nautilus-list-view treeview.view:not(:hover):not(:active):not(:selected) { background-color: transparent; border-radius: 0; }
 
